DesafioPricing/force-app/main/default/objects/DistributionCenter__c/DistributionCenter__c.object-meta.xml
<CustomObject>
    <label>DistributionCenter</label>
    <nameField>
        <label>DistributionCenter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DistributionCenters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>