DesafioPricing/force-app/main/default/objects/DistributionCenter__c/fields/DistributionCenterCode__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenterCode__c</fullName>
    <description>Chave de cadastro.</description>
    <externalId>true</externalId>
    <label>DistributionCenterCode</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>