DesafioPricing/force-app/main/default/objects/DistributionCenter__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para estado.</description>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>DistributionCenters</relationshipLabel>
    <relationshipName>DistributionCenters</relationshipName>
    <type>Lookup</type>
</CustomField>